Fix logo width on mobile portrait

--- a/css/main.css
+++ b/css/main.css
@@ -814,7 +814,7 @@ form.paypal {
 
   #events #mg2020.logo {
     width: 100%;
-    max-width: 100%;
+    max-width: 90%;
     clear: both;
     margin-top: 0;
   }
